# asif-ai-book

./: .env  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflow/: deploy.yml
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/api/: health.py  ingestion.py  query.py
backend/app/: main.py
backend/ingestion/: run_ingestion.py
backend/services/: ingestion_service.py  openrouter_service.py  qdrant_service.py  rag_service.py
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/my-website/: .env  .env.example  .eslintignore  .npmignore  .prettierignore  DEPLOYMENT_FIXES.md  docusaurus-pdf.config.js  docusaurus.config.ts  fix-deployment.sh
frontend/my-website/docs/: bibliography.md
frontend/src/hooks/: useChat.ts  useSelection.ts
frontend/src/services/: api.ts  chat-api.ts
frontend/src/types/: index.ts
frontend/tests/unit/: test-selection.ts
history/adr/: 0001-documentation-system-choice.md
history/prompts/001-project-setup/: 001-create-project-setup-plan.plan.prompt.md  001-create-project-setup-spec.spec.prompt.md  001-create-project-setup-tasks.tasks.prompt.md
my_book/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts  vercel.json
my_book/docs/: contributing.md  intro.md
my_book/docs/advanced/: configuration.md
specs/001-project-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-docusaurus-documentation/: plan.md  spec.md  tasks.md
(+64 files in other folders)
